docs/api/qiskit/0.37/qiskit.circuit.ControlFlowOp.mdx
---
title: ControlFlowOp (v0.37)
description: API reference for qiskit.circuit.ControlFlowOp in qiskit v0.37
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit.circuit.ControlFlowOp
---

# ControlFlowOp

<Class id="qiskit.circuit.ControlFlowOp" isDedicatedPage={true} github="https://github.com/qiskit/qiskit/tree/stable/0.21/qiskit/circuit/controlflow/control_flow.py" signature="ControlFlowOp(name, num_qubits, num_clbits, params, duration=None, unit='dt', label=None)" modifiers="class">
  Bases: [`qiskit.circuit.instruction.Instruction`](qiskit.circuit.Instruction "qiskit.circuit.instruction.Instruction"), `abc.ABC`

  Abstract class to encapsulate all control flow operations.

  Create a new instruction.

  **Parameters**

  *   **name** (*str*) – instruction name
  *   **num\_qubits** (*int*) – instruction’s qubit width
  *   **num\_clbits** (*int*) – instruction’s clbit width
  *   **params** (*list\[int|float|complex|str|ndarray|list|*[*ParameterExpression*](qiskit.circuit.ParameterExpression "qiskit.circuit.ParameterExpression")*]*) – list of parameters
  *   **duration** (*int or float*) – instruction’s duration. it must be integer if `unit` is ‘dt’
  *   **unit** (*str*) – time unit of duration
  *   **label** (*str or None*) – An optional label for identifying the instruction.

  **Raises**

  *   **CircuitError** – when the register is not in the correct format.
  *   **TypeError** – when the optional label is provided, but it is not a string.

  ## Methods

  <span id="qiskit-circuit-controlflowop-add-decomposition" />

  ### add\_decomposition

  <Function id="qiskit.circuit.ControlFlowOp.add_decomposition" signature="ControlFlowOp.add_decomposition(decomposition)">
    Add a decomposition of the instruction to the SessionEquivalenceLibrary.
  </Function>

  <span id="qiskit-circuit-controlflowop-assemble" />

  ### assemble

  <Function id="qiskit.circuit.ControlFlowOp.assemble" signature="ControlFlowOp.assemble()">
    Assemble a QasmQobjInstruction
  </Function>

  <span id="qiskit-circuit-controlflowop-broadcast-arguments" />

  ### broadcast\_arguments

  <Function id="qiskit.circuit.ControlFlowOp.broadcast_arguments" signature="ControlFlowOp.broadcast_arguments(qargs, cargs)">
    Validation of the arguments.

    **Parameters**

    *   **qargs** (*List*) – List of quantum bit arguments.
    *   **cargs** (*List*) – List of classical bit arguments.

    **Yields**

    *Tuple(List, List)* – A tuple with single arguments.

    **Raises**

    **CircuitError** – If the input is not valid. For example, the number of arguments does not match the gate expectation.
  </Function>

  <span id="qiskit-circuit-controlflowop-c-if" />

  ### c\_if

  <Function id="qiskit.circuit.ControlFlowOp.c_if" signature="ControlFlowOp.c_if(classical, val)">
    Set a classical equality condition on this instruction between the register or cbit `classical` and value `val`.

    <Admonition title="Note" type="note">
      This is a setter method, not an additive one. Calling this multiple times will silently override any previously set condition; it does not stack.
    </Admonition>
  </Function>

  <span id="qiskit-circuit-controlflowop-copy" />

  ### copy

  <Function id="qiskit.circuit.ControlFlowOp.copy" signature="ControlFlowOp.copy(name=None)">
    Copy of the instruction.

    **Parameters**

    **name** (*str*) – name to be given to the copied circuit, if None then the name stays the same.

    **Returns**

    **a copy of the current instruction, with the name**

    updated if it was provided

    **Return type**

    [qiskit.circuit.Instruction](qiskit.circuit.Instruction "qiskit.circuit.Instruction")
  </Function>

  <span id="qiskit-circuit-controlflowop-inverse" />

  ### inverse

  <Function id="qiskit.circuit.ControlFlowOp.inverse" signature="ControlFlowOp.inverse()">
    Invert this instruction.

    If the instruction is composite (i.e. has a definition), then its definition will be recursively inverted.

    Special instructions inheriting from Instruction can implement their own inverse (e.g. T and Tdg, Barrier, etc.)

    **Returns**

    a fresh instruction for the inverse

    **Return type**

    [qiskit.circuit.Instruction](qiskit.circuit.Instruction "qiskit.circuit.Instruction")

    **Raises**

    **CircuitError** – if the instruction is not composite and an inverse has not been implemented for it.
  </Function>

  <span id="qiskit-circuit-controlflowop-is-parameterized" />

  ### is\_parameterized

  <Function id="qiskit.circuit.ControlFlowOp.is_parameterized" signature="ControlFlowOp.is_parameterized()">
    Return True .IFF. instruction is parameterized else False
  </Function>

  <span id="qiskit-circuit-controlflowop-qasm" />

  ### qasm

  <Function id="qiskit.circuit.ControlFlowOp.qasm" signature="ControlFlowOp.qasm()">
    Return a default OpenQASM string for the instruction.

    Derived instructions may override this to print in a different format (e.g. measure q\[0] -> c\[0];).
  </Function>

  <span id="qiskit-circuit-controlflowop-repeat" />

  ### repeat

  <Function id="qiskit.circuit.ControlFlowOp.repeat" signature="ControlFlowOp.repeat(n)">
    Creates an instruction with gate repeated n amount of times.

    **Parameters**

    **n** (*int*) – Number of times to repeat the instruction

    **Returns**

    Containing the definition.

    **Return type**

    [qiskit.circuit.Instruction](qiskit.circuit.Instruction "qiskit.circuit.Instruction")

    **Raises**

    **CircuitError** – If n \< 1.
  </Function>

  <span id="qiskit-circuit-controlflowop-replace-blocks" />

  ### replace\_blocks

  <Function id="qiskit.circuit.ControlFlowOp.replace_blocks" signature="ControlFlowOp.replace_blocks(blocks)" modifiers="abstract">
    Replace blocks and return new instruction. :type blocks: `Iterable`\[[`QuantumCircuit`](qiskit.circuit.QuantumCircuit "qiskit.circuit.quantumcircuit.QuantumCircuit")] :param blocks: Tuple of QuantumCircuits to replace in instruction.

    **Return type**

    [`ControlFlowOp`](qiskit.circuit.ControlFlowOp "qiskit.circuit.controlflow.control_flow.ControlFlowOp")

    **Returns**

    New ControlFlowOp with replaced blocks.
  </Function>

  <span id="qiskit-circuit-controlflowop-reverse-ops" />

  ### reverse\_ops

  <Function id="qiskit.circuit.ControlFlowOp.reverse_ops" signature="ControlFlowOp.reverse_ops()">
    For a composite instruction, reverse the order of sub-instructions.

    This is done by recursively reversing all sub-instructions. It does not invert any gate.

    **Returns**

    **a new instruction with**

    sub-instructions reversed.

    **Return type**

    [qiskit.circuit.Instruction](qiskit.circuit.Instruction "qiskit.circuit.Instruction")
  </Function>

  <span id="qiskit-circuit-controlflowop-soft-compare" />

  ### soft\_compare

  <Function id="qiskit.circuit.ControlFlowOp.soft_compare" signature="ControlFlowOp.soft_compare(other)">
    Soft comparison between gates. Their names, number of qubits, and classical bit numbers must match. The number of parameters must match. Each parameter is compared. If one is a ParameterExpression then it is not taken into account.

    **Parameters**

    **other** (*instruction*) – other instruction.

    **Returns**

    are self and other equal up to parameter expressions.

    **Return type**

    bool
  </Function>

  <span id="qiskit-circuit-controlflowop-validate-parameter" />

  ### validate\_parameter

  <Function id="qiskit.circuit.ControlFlowOp.validate_parameter" signature="ControlFlowOp.validate_parameter(parameter)">
    Instruction parameters has no validation or normalization.
  </Function>

  ## Attributes

  ### blocks

  <Attribute id="qiskit.circuit.ControlFlowOp.blocks">
    Tuple of QuantumCircuits which may be executed as part of the execution of this ControlFlowOp. May be parameterized by a loop parameter to be resolved at run time.

    **Return type**

    `Tuple`\[[`QuantumCircuit`](qiskit.circuit.QuantumCircuit "qiskit.circuit.quantumcircuit.QuantumCircuit"), `...`]
  </Attribute>

  ### condition\_bits

  <Attribute id="qiskit.circuit.ControlFlowOp.condition_bits">
    Get Clbits in condition.

    **Return type**

    `List`\[[`Clbit`](qiskit.circuit.Clbit "qiskit.circuit.classicalregister.Clbit")]
  </Attribute>

  ### decompositions

  <Attribute id="qiskit.circuit.ControlFlowOp.decompositions">
    Get the decompositions of the instruction from the SessionEquivalenceLibrary.
  </Attribute>

  ### definition

  <Attribute id="qiskit.circuit.ControlFlowOp.definition">
    Return definition in terms of other basic gates.
  </Attribute>

  ### duration

  <Attribute id="qiskit.circuit.ControlFlowOp.duration">
    Get the duration.
  </Attribute>

  ### label

  <Attribute id="qiskit.circuit.ControlFlowOp.label">
    Return instruction label

    **Return type**

    `str`
  </Attribute>

  ### name

  <Attribute id="qiskit.circuit.ControlFlowOp.name">
    Return the name.
  </Attribute>

  ### num\_clbits

  <Attribute id="qiskit.circuit.ControlFlowOp.num_clbits">
    Return the number of clbits.
  </Attribute>

  ### num\_qubits

  <Attribute id="qiskit.circuit.ControlFlowOp.num_qubits">
    Return the number of qubits.
  </Attribute>

  ### params

  <Attribute id="qiskit.circuit.ControlFlowOp.params">
    return instruction params.
  </Attribute>

  ### unit

  <Attribute id="qiskit.circuit.ControlFlowOp.unit">
    Get the time unit of duration.
  </Attribute>
</Class>

